@@ -23,5 +23,5 @@ EXTRA_DIST=l1-1.grb l1-2.grb l1-3.grb l1-orig.grb README.txt
 
 MOSTLYCLEANFILES = *~
 CLEANFILES = *~
-DISTCLEANFILES = *~ Makefile Makefile.in
+DISTCLEANFILES = *~ Makefile
 MAINTAINERCLEANFILES = *~ Makefile Makefile.in
