@@ -27,5 +27,5 @@ EXTRA_DIST= numpres.pcb.output_group1.grb numpres.pcb.output_group2.grb \
 
 MOSTLYCLEANFILES = *~
 CLEANFILES = *~
-DISTCLEANFILES = *~ Makefile Makefile.in
+DISTCLEANFILES = *~ Makefile
 MAINTAINERCLEANFILES = *~ Makefile Makefile.in
